--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
     // data from: https://data.giss.nasa.gov/gistemp/
     // Mean from: https://earthobservatory.nasa.gov/world-of-change/global-temperatures
 
-    getData();
+    // getData();
 
-    async function getData() {
-      const response = await fetch('https://statsapi.web.nhl.com/api/v1/schedule');
-      const data = await response.text();
-      console.log(data);
-    }
+    // async function getData() {
+    //   const response = await fetch('https://statsapi.web.nhl.com/api/v1/schedule');
+    //   const data = await response.text();
+    //   console.log(data);
+    // }
   </script>
+
+  <script src="app.js"></script>
 
 </body>
 
