--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ClimateGate</title>
+  <script src = "https://cdn.jsdelivr.net/npm/chart.js@3.7.0/dist/chart.min.js"></script>
 </head>
 
 <body>
+
+<canvas id = "chart" width = vw height = vh></canvas>
+
   <script>
     // data from: https://data.giss.nasa.gov/gistemp/
     // Mean from: https://earthobservatory.nasa.gov/world-of-change/global-temperatures
