--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
   <title>ClimateGate</title>
   <script src = "https://cdn.jsdelivr.net/npm/chart.js@3.7.0/dist/chart.min.js"></script>
 </head>
+<h1>KM-1</h1>
+<style>
 
+h1 {
+  color:darkorange;
+}
+
+</style>
 <body>
 
 <canvas id = "chart" width = vw height = vh></canvas>
